# cookiecutter-svdvoort

./: .project_init.sh  README.md  cookiecutter.json  copier.yml  pyproject.toml  setup.cfg  temp.txt
.github/: dependabot.yml
.github/workflows/: misspell.yml  test.yml
hooks/: post_gen_project.py
project_name/: .pre-commit-config.yaml  .project_init.sh  README.md.jinja  pyproject.toml.jinja
project_name/.github/workflows/: misspell.yml  precommit_update.yml  test.yml
project_name/docs/: conf.py.jinja
project_name/tests/test_example/: test_some_function.py.jinja
{{cookiecutter.project_name}}/: .pre-commit-config.yaml  .readthedocs.yml  Makefile  README.md  pyproject.toml  setup.cfg
{{cookiecutter.project_name}}/.devcontainer/: Dockerfile  devcontainer.json
{{cookiecutter.project_name}}/.github/workflows/: cruft_update.yml  misspell.yml  release.yml  test.yml
{{cookiecutter.project_name}}/docs/: conf.py  requirements.txt
{{cookiecutter.project_name}}/tests/test_example/: test_some_function.py
{{project_name}}/: .pre-commit-config.yaml  Makefile  pyproject.toml.jinja
{{project_name}}/.github/workflows/: release.yml.jinja
{{project_name}}/docs/: conf.py.jinja
