[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "cookiecutter-svdvoort"
description = "Cookiecutter package"
version = "0.1.0"
readme = "README.md"
authors = ["svdvoort"]

license = "MIT"


[tool.poetry.dependencies]
python = ">=3.9,<3.12"

cookiecutter = "^1.7"
jinja2-git = "^1.1"
lice = "^0.6"


[tool.poetry.group.dev.dependencies]
binaryornot = "^0.4"

flake8-pytest-style = "^1.3"

pytest = "^5.4"
pytest-randomly = "^3.5"
pytest-cookies = "^0.5"

safety = "^1.9"
tomlkit = "^0.7"
