[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "cookiecutter-svdvoort"
description = "Cookiecutter package"
version = "0.1.0"
readme = "README.md"
authors = ["svdvoort"]

license = "MIT"


[tool.poetry.dependencies]
python = ">=3.9,<3.12"

cookiecutter = "^2.3"
jinja2-git = "^1.3"
lice = "^0.6"


[tool.poetry.group.test.dependencies]
binaryornot = "^0.4"

wemake-python-styleguide = "^0.17"
flake8-pytest-style = "^1.6"
nitpick = "^0.34"

pytest = "^7.4"
pytest-randomly = "^3.15"
pytest-cookies = "^0.7"

safety = "^2.3"
tomli = "^2.0"
